add webp picture

--- a/index.html
+++ b/index.html
@@ -109,21 +109,33 @@
                 <h2 class="title title--margin">Чим ми займаємося</h2>
                 <ul class="doing__list list">
                     <li class="doing__item">
-                        <img srcset="./images/Desktop/doing1.jpg 1x, ./images/Desktop/doing1-2x.jpg 2x"
-                            src="./images/Desktop/doing1.jpg" alt="людина працює за компьютером з алгорітмом на папері"
-                            width="370" height="294">
+                        <picture>
+                            <source srcset="./images/Desktop/doing1.webp 1x, ./images/Desktop/doing1-2x.webp 2x"
+                                type="image/webp">
+                            <img srcset="./images/Desktop/doing1.jpg 1x, ./images/Desktop/doing1-2x.jpg 2x"
+                                src="./images/Desktop/doing1.jpg"
+                                alt="людина працює за компьютером з алгорітмом на папері" width="370" height="294">
+                        </picture>
                         <h3 class="doing__text">Десктопні додатки</h3>
                     </li>
                     <li class="doing__item">
-                        <img srcset="./images/Desktop/doing2.jpg 1x, ./images/Desktop/doing2-2x.jpg 2x"
-                            src="./images/Desktop/doing2.jpg" alt="людина працює за компьютером зі смартфоном"
-                            width="370" height="294">
+                        <picture>
+                            <source srcset="./images/Desktop/doing2.webp 1x, ./images/Desktop/doing2-2x.webp 2x"
+                                type="image/webp">
+                            <img srcset="./images/Desktop/doing2.jpg 1x, ./images/Desktop/doing2-2x.jpg 2x"
+                                src="./images/Desktop/doing2.jpg" alt="людина працює за компьютером зі смартфоном"
+                                width="370" height="294">
+                        </picture>
                         <h3 class="doing__text">Мобільні додатки</h3>
                     </li>
                     <li class="doing__item">
-                        <img srcset="./images/Desktop/doing3.jpg 1x, ./images/Desktop/doing3-2x.jpg 2x"
-                            src="./images/Desktop/doing3.jpg" alt="людина працює за компьютером з планшетом" width="370"
-                            height="294">
+                        <picture>
+                            <source srcset="./images/Desktop/doing3.webp 1x, ./images/Desktop/doing3-2x.webp 2x"
+                                type="image/webp">
+                            <img srcset="./images/Desktop/doing3.jpg 1x, ./images/Desktop/doing3-2x.jpg 2x"
+                                src="./images/Desktop/doing3.jpg" alt="людина працює за компьютером з планшетом"
+                                width="370" height="294">
+                        </picture>
                         <h3 class="doing__text">Дизайнерські рішення</h3>
                     </li>
                 </ul>
