--- a/index.html
+++ b/index.html
@@ -146,8 +146,22 @@
                 <h2 class="title title--margin">Наша команда</h2>
                 <ul class="team__list list">
                     <li class="team__item">
-                        <img src="./images/Desktop/teamcard1.jpg" alt="усміхнений чоловік в окулярах" width="270"
-                            height="260">
+                        <picture>
+                            <source srcset='./images/Desktop/teamcard1.webp 1x, ./images/Desktop/teamcard1@2x.webp 2x'
+                                media='(min-width: 1200px)' type='image/webp'>
+                            <source srcset='./images/Desktop/teamcard1.jpg 1x, ./images/Desktop/teamcard1@2x.jpg 2x'
+                                media='(min-width: 1200px)' type='image/jpeg'>
+                            <source srcset='./images/Tablet/teamcard1.webp 1x, ./images/Tablet/teamcard1@2x.webp 2x'
+                                media='(min-width: 768px)' type='image/webp'>
+                            <source srcset='./images/Tablet/teamcard1.jpg 1x, ./images/Tablet/teamcard1@2x.jpg 2x'
+                                media='(min-width: 768px)' type='image/jpeg'>
+                            <source srcset='./images/Mobile/teamcard1.webp 1x, ./images/Mobile/teamcard1@2x.webp 2x'
+                                media='(max-width: 767px)' type='image/webp'>
+                            <source srcset='./images/Mobile/teamcard1.jpg 1x, ./images/Mobile/teamcard1@2x.jpg 2x'
+                                media='(max-width: 767px)' type='image/jpeg'>
+                            <img src="./images/Desktop/teamcard1.jpg" alt="усміхнений чоловік в окулярах" width="270"
+                                height="260">
+                        </picture>
                         <div class="team__card">
                             <h3 class="team__title">Ігор Дем'яненко</h3>
                             <p class="team__job" lang="en">Product Designer</p>
@@ -184,8 +198,22 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="./images/Desktop/teamcard2.jpg" alt="усміхнена жінка в окулярах" width="270"
-                            height="260">
+                        <picture>
+                            <source srcset='./images/Desktop/teamcard2.webp 1x, ./images/Desktop/teamcard2@2x.webp 2x'
+                                media='(min-width: 1200px)' type='image/webp'>
+                            <source srcset='./images/Desktop/teamcard2.jpg 1x, ./images/Desktop/teamcard2@2x.jpg 2x'
+                                media='(min-width: 1200px)' type='image/jpeg'>
+                            <source srcset='./images/Tablet/teamcard2.webp 1x, ./images/Tablet/teamcard2@2x.webp 2x'
+                                media='(min-width: 768px)' type='image/webp'>
+                            <source srcset='./images/Tablet/teamcard2.jpg 1x, ./images/Tablet/teamcard2@2x.jpg 2x'
+                                media='(min-width: 768px)' type='image/jpeg'>
+                            <source srcset='./images/Mobile/teamcard2.webp 1x, ./images/Mobile/teamcard2@2x.webp 2x'
+                                media='(max-width: 767px)' type='image/webp'>
+                            <source srcset='./images/Mobile/teamcard2.jpg 1x, ./images/Mobile/teamcard2@2x.jpg 2x'
+                                media='(max-width: 767px)' type='image/jpeg'>
+                            <img src="./images/Desktop/teamcard2.jpg" alt="усміхнена жінка в окулярах" width="270"
+                                height="260">
+                        </picture>
                         <div class="team__card">
                             <h3 class="team__title">Ольга Рєпіна</h3>
                             <p class="team__job" lang="en">Frontend Developer</p>
@@ -222,7 +250,21 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="./images/Desktop/teamcard3.jpg" alt="усміхнений чоловік" width="270" height="260">
+                        <picture>
+                            <source srcset='./images/Desktop/teamcard3.webp 1x, ./images/Desktop/teamcard3@2x.webp 2x'
+                                media='(min-width: 1200px)' type='image/webp'>
+                            <source srcset='./images/Desktop/teamcard3.jpg 1x, ./images/Desktop/teamcard3@2x.jpg 2x'
+                                media='(min-width: 1200px)' type='image/jpeg'>
+                            <source srcset='./images/Tablet/teamcard3.webp 1x, ./images/Tablet/teamcard3@2x.webp 2x'
+                                media='(min-width: 768px)' type='image/webp'>
+                            <source srcset='./images/Tablet/teamcard3.jpg 1x, ./images/Tablet/teamcard3@2x.jpg 2x'
+                                media='(min-width: 768px)' type='image/jpeg'>
+                            <source srcset='./images/Mobile/teamcard3.webp 1x, ./images/Mobile/teamcard3@2x.webp 2x'
+                                media='(max-width: 767px)' type='image/webp'>
+                            <source srcset='./images/Mobile/teamcard3.jpg 1x, ./images/Mobile/teamcard3@2x.jpg 2x'
+                                media='(max-width: 767px)' type='image/jpeg'>
+                            <img src="./images/Desktop/teamcard3.jpg" alt="усміхнений чоловік" width="270" height="260">
+                        </picture>
                         <div class="team__card">
                             <h3 class="team__title">Микола Тарасов</h3>
                             <p class="team__job" lang="en">Marketing</p>
@@ -259,8 +301,22 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="./images/Desktop/teamcard4.jpg" alt="усміхнений чоловік в окулярах" width="270"
-                            height="260">
+                        <picture>
+                            <source srcset='./images/Desktop/teamcard4.webp 1x, ./images/Desktop/teamcard4@2x.webp 2x'
+                                media='(min-width: 1200px)' type='image/webp'>
+                            <source srcset='./images/Desktop/teamcard4.jpg 1x, ./images/Desktop/teamcard4@2x.jpg 2x'
+                                media='(min-width: 1200px)' type='image/jpeg'>
+                            <source srcset='./images/Tablet/teamcard4.webp 1x, ./images/Tablet/teamcard4@2x.webp 2x'
+                                media='(min-width: 768px)' type='image/webp'>
+                            <source srcset='./images/Tablet/teamcard4.jpg 1x, ./images/Tablet/teamcard4@2x.jpg 2x'
+                                media='(min-width: 768px)' type='image/jpeg'>
+                            <source srcset='./images/Mobile/teamcard4.webp 1x, ./images/Mobile/teamcard4@2x.webp 2x'
+                                media='(max-width: 767px)' type='image/webp'>
+                            <source srcset='./images/Mobile/teamcard4.jpg 1x, ./images/Mobile/teamcard4@2x.jpg 2x'
+                                media='(max-width: 767px)' type='image/jpeg'>
+                            <img src="./images/Desktop/teamcard4.jpg" alt="усміхнений чоловік в окулярах" width="270"
+                                height="260">
+                        </picture>
                         <div class="team__card">
                             <h3 class="team__title">Михайло Єрмаков</h3>
                             <p class="team__job" lang="en">UI Designer</p>
