--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -64,7 +64,7 @@
             <ul class="features__list list container">
                 <li class="features__item">
                     <div class="features__container">
-                        <svg class="features__icon" wiight="70" height="70">
+                        <svg class="features__icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-features-antenna"></use>
                         </svg>
                     </div>
@@ -75,7 +75,7 @@
                 </li>
                 <li class="features__item">
                     <div class="features__container">
-                        <svg class="features__icon" wiight="70" height="70">
+                        <svg class="features__icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-features-clock"></use>
                         </svg>
                     </div>
@@ -85,7 +85,7 @@
                 </li>
                 <li class="features__item">
                     <div class="features__container">
-                        <svg class="features__icon" wiight="70" height="70">
+                        <svg class="features__icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-features-diagram"></use>
                         </svg>
                     </div>
@@ -94,7 +94,7 @@
                 </li>
                 <li class="features__item">
                     <div class="features__container">
-                        <svg class="features__icon" wiight="70" height="70">
+                        <svg class="features__icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-features-astronaut"></use>
                         </svg>
                     </div>
@@ -435,28 +435,28 @@
                 <p class="footer__appeal">приєднуйтесь</p>
                 <ul class="cos">
                     <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link" link">
+                        <a href="#" class="cos__link cos__link--footer-color link">
                             <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link" link">
+                        <a href="#" class="cos__link cos__link--footer-color link">
                             <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link" link">
+                        <a href="#" class="cos__link cos__link--footer-color link">
                             <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link" link">
+                        <a href="#" class="cos__link cos__link--footer-color link">
                             <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
@@ -466,14 +466,14 @@
             </div>
             <form class="footer__form">
                 <p class="footer__appeal">Підпишіться на розсилку</p>
-                <label class="footer__label">
+                <div class="footer__label">
                     <input class="footer__input" type="email" name="mail" placeholder="E-mail">
                     <button class="footer__button button" type="submit">Підписатися
                         <svg class="footer__icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
-                </label>
+                </div>
             </form>
         </div>
     </footer>
@@ -531,7 +531,7 @@
                 </ul>
                 <div class="check">
                     <input class="check__imput visually-hidden" type="checkbox" name="privacy" value="true"
-                        id="privacy" />
+                        id="privacy">
                     <label class="check__text" for="privacy">
                         <span class="check__wrap">
                             <svg class="check__icon" width="16" height="15">
