--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -397,14 +397,14 @@
             </div>
             <form class="footer__form">
                 <p class="footer__appeal">Підпишіться на розсилку</p>
-                <label class="footer__label">
+                <div class="footer__label">
                     <input class="footer__input" type="email" name="mail" placeholder="E-mail">
                     <button class="footer__button button" type="submit">Підписатися
                         <svg class="footer__icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
-                </label>
+                </div>
             </form>
         </div>
     </footer>
