--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="header__container container">
             <nav class="nav">
                 <a class="logo logo--header link" href="./index.html" lang="en">
@@ -52,7 +52,7 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
 
     <main>
         <section class="hero">
@@ -148,17 +148,17 @@
                     <li class="team__item">
                         <picture>
                             <source srcset='./images/Desktop/teamcard1.webp 1x, ./images/Desktop/teamcard1@2x.webp 2x'
-                                media='(min-width: 1200px)' type='image/webp'>
+                                media='(min-width: 1200px)' type='image/webp' width="270" height="260">
                             <source srcset='./images/Desktop/teamcard1.jpg 1x, ./images/Desktop/teamcard1@2x.jpg 2x'
-                                media='(min-width: 1200px)' type='image/jpeg'>
+                                media='(min-width: 1200px)' type='image/jpeg' width="270" height="260">
                             <source srcset='./images/Tablet/teamcard1.webp 1x, ./images/Tablet/teamcard1@2x.webp 2x'
-                                media='(min-width: 768px)' type='image/webp'>
+                                media='(min-width: 768px)' type='image/webp' width="354" height="374">
                             <source srcset='./images/Tablet/teamcard1.jpg 1x, ./images/Tablet/teamcard1@2x.jpg 2x'
-                                media='(min-width: 768px)' type='image/jpeg'>
+                                media='(min-width: 768px)' type='image/jpeg' width="354" height="374">
                             <source srcset='./images/Mobile/teamcard1.webp 1x, ./images/Mobile/teamcard1@2x.webp 2x'
-                                media='(max-width: 767px)' type='image/webp'>
+                                media='(max-width: 767px)' type='image/webp' width="450" height="460">
                             <source srcset='./images/Mobile/teamcard1.jpg 1x, ./images/Mobile/teamcard1@2x.jpg 2x'
-                                media='(max-width: 767px)' type='image/jpeg'>
+                                media='(max-width: 767px)' type='image/jpeg' width="450" height="460">
                             <img src="./images/Desktop/teamcard1.jpg" alt="усміхнений чоловік в окулярах" width="270"
                                 height="260">
                         </picture>
@@ -200,17 +200,17 @@
                     <li class="team__item">
                         <picture>
                             <source srcset='./images/Desktop/teamcard2.webp 1x, ./images/Desktop/teamcard2@2x.webp 2x'
-                                media='(min-width: 1200px)' type='image/webp'>
+                                media='(min-width: 1200px)' type='image/webp' width="270" height="260">
                             <source srcset='./images/Desktop/teamcard2.jpg 1x, ./images/Desktop/teamcard2@2x.jpg 2x'
-                                media='(min-width: 1200px)' type='image/jpeg'>
+                                media='(min-width: 1200px)' type='image/jpeg' width="270" height="260">
                             <source srcset='./images/Tablet/teamcard2.webp 1x, ./images/Tablet/teamcard2@2x.webp 2x'
-                                media='(min-width: 768px)' type='image/webp'>
+                                media='(min-width: 768px)' type='image/webp' width="354" height="374">
                             <source srcset='./images/Tablet/teamcard2.jpg 1x, ./images/Tablet/teamcard2@2x.jpg 2x'
-                                media='(min-width: 768px)' type='image/jpeg'>
+                                media='(min-width: 768px)' type='image/jpeg' width="354" height="374">
                             <source srcset='./images/Mobile/teamcard2.webp 1x, ./images/Mobile/teamcard2@2x.webp 2x'
-                                media='(max-width: 767px)' type='image/webp'>
+                                media='(max-width: 767px)' type='image/webp' width="450" height="460">
                             <source srcset='./images/Mobile/teamcard2.jpg 1x, ./images/Mobile/teamcard2@2x.jpg 2x'
-                                media='(max-width: 767px)' type='image/jpeg'>
+                                media='(max-width: 767px)' type='image/jpeg' width="450" height="460">
                             <img src="./images/Desktop/teamcard2.jpg" alt="усміхнена жінка в окулярах" width="270"
                                 height="260">
                         </picture>
@@ -252,17 +252,17 @@
                     <li class="team__item">
                         <picture>
                             <source srcset='./images/Desktop/teamcard3.webp 1x, ./images/Desktop/teamcard3@2x.webp 2x'
-                                media='(min-width: 1200px)' type='image/webp'>
+                                media='(min-width: 1200px)' type='image/webp' width="270" height="260">
                             <source srcset='./images/Desktop/teamcard3.jpg 1x, ./images/Desktop/teamcard3@2x.jpg 2x'
-                                media='(min-width: 1200px)' type='image/jpeg'>
+                                media='(min-width: 1200px)' type='image/jpeg' width="270" height="260">
                             <source srcset='./images/Tablet/teamcard3.webp 1x, ./images/Tablet/teamcard3@2x.webp 2x'
-                                media='(min-width: 768px)' type='image/webp'>
+                                media='(min-width: 768px)' type='image/webp' width="354" height="374">
                             <source srcset='./images/Tablet/teamcard3.jpg 1x, ./images/Tablet/teamcard3@2x.jpg 2x'
-                                media='(min-width: 768px)' type='image/jpeg'>
+                                media='(min-width: 768px)' type='image/jpeg' width="354" height="374">
                             <source srcset='./images/Mobile/teamcard3.webp 1x, ./images/Mobile/teamcard3@2x.webp 2x'
-                                media='(max-width: 767px)' type='image/webp'>
+                                media='(max-width: 767px)' type='image/webp' width="450" height="460">
                             <source srcset='./images/Mobile/teamcard3.jpg 1x, ./images/Mobile/teamcard3@2x.jpg 2x'
-                                media='(max-width: 767px)' type='image/jpeg'>
+                                media='(max-width: 767px)' type='image/jpeg' width="450" height="460">
                             <img src="./images/Desktop/teamcard3.jpg" alt="усміхнений чоловік" width="270" height="260">
                         </picture>
                         <div class="team__card">
@@ -303,17 +303,17 @@
                     <li class="team__item">
                         <picture>
                             <source srcset='./images/Desktop/teamcard4.webp 1x, ./images/Desktop/teamcard4@2x.webp 2x'
-                                media='(min-width: 1200px)' type='image/webp'>
+                                media='(min-width: 1200px)' type='image/webp' width="270" height="260">
                             <source srcset='./images/Desktop/teamcard4.jpg 1x, ./images/Desktop/teamcard4@2x.jpg 2x'
-                                media='(min-width: 1200px)' type='image/jpeg'>
+                                media='(min-width: 1200px)' type='image/jpeg' width="270" height="260">
                             <source srcset='./images/Tablet/teamcard4.webp 1x, ./images/Tablet/teamcard4@2x.webp 2x'
-                                media='(min-width: 768px)' type='image/webp'>
+                                media='(min-width: 768px)' type='image/webp' width="354" height="374">
                             <source srcset='./images/Tablet/teamcard4.jpg 1x, ./images/Tablet/teamcard4@2x.jpg 2x'
-                                media='(min-width: 768px)' type='image/jpeg'>
+                                media='(min-width: 768px)' type='image/jpeg' width="354" height="374">
                             <source srcset='./images/Mobile/teamcard4.webp 1x, ./images/Mobile/teamcard4@2x.webp 2x'
-                                media='(max-width: 767px)' type='image/webp'>
+                                media='(max-width: 767px)' type='image/webp' width="450" height="460">
                             <source srcset='./images/Mobile/teamcard4.jpg 1x, ./images/Mobile/teamcard4@2x.jpg 2x'
-                                media='(max-width: 767px)' type='image/jpeg'>
+                                media='(max-width: 767px)' type='image/jpeg' width="450" height="460">
                             <img src="./images/Desktop/teamcard4.jpg" alt="усміхнений чоловік в окулярах" width="270"
                                 height="260">
                         </picture>
@@ -407,7 +407,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer__container container">
             <div class="footer__address">
                 <a class="logo logo--opposite link" href="./index.html" lang="en">
@@ -476,7 +476,7 @@
                 </div>
             </form>
         </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal__close" type="button" data-modal-close>
