index without header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <!-- <header class="header">
+    <header class="header">
         <div class="header__container container">
             <nav class="nav">
                 <a class="logo logo--header link" href="./index.html" lang="en">
@@ -52,7 +52,7 @@
                 </li>
             </ul>
         </div>
-    </header> -->
+    </header>
 
     <main>
         <section class="hero">
@@ -407,62 +407,66 @@
         </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
+
         <div class="footer__container container">
-            <div class="footer__address">
-                <a class="logo logo--opposite link" href="./index.html" lang="en">
-                    <span class="logo__accent">Web</span>Studio
-                </a>
-                <address class="address">
-                    <ul class="list">
-                        <li class="address__item"><a class="address__contact address__contact--first link"
-                                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-                                rel="noopener noreferrer nofollow">г. Киев,
-                                пр-т Леси
-                                Украинки, 26</a></li>
-                        <li class="address__item"><a class="address__contact link"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="address__item"><a class="address__contact link" href="tel:+380961111111">+38
-                                096
-                                111
-                                11
-                                11</a>
+            <div class="footer__combiner">
+                <div class="footer__address">
+                    <a class="logo logo--opposite link" href="./index.html" lang="en">
+                        <span class="logo__accent">Web</span>Studio
+                    </a>
+                    <address class="address">
+                        <ul class="list">
+                            <li class="address__item"><a class="address__contact address__contact--first link"
+                                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
+                                    rel="noopener noreferrer nofollow">г.
+                                    Киев,
+                                    пр-т Леси
+                                    Украинки, 26</a></li>
+                            <li class="address__item"><a class="address__contact link"
+                                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class="address__item"><a class="address__contact link" href="tel:+380961111111">+38
+                                    096
+                                    111
+                                    11
+                                    11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer__cos">
+                    <p class="footer__appeal">приєднуйтесь</p>
+                    <ul class="cos">
+                        <li class="list">
+                            <a href="#" class="cos__link cos__link--footer-color link">
+                                <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="cos__link cos__link--footer-color link">
+                                <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="cos__link cos__link--footer-color link">
+                                <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="cos__link cos__link--footer-color link">
+                                <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
-            </div>
-            <div class="footer__cos">
-                <p class="footer__appeal">приєднуйтесь</p>
-                <ul class="cos">
-                    <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link">
-                            <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link">
-                            <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link">
-                            <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="list">
-                        <a href="#" class="cos__link cos__link--footer-color link">
-                            <svg class="cos__icon cos__icon--change-fill" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <form class="footer__form">
                 <p class="footer__appeal">Підпишіться на розсилку</p>
@@ -476,7 +480,7 @@
                 </div>
             </form>
         </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal__close" type="button" data-modal-close>
