--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                         </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
+            <button class="menu__open" type="button">
+                <svg width="40" height="40">
+                    <use href="./images/icons.svg#icon-menu"></use>
+                </svg>
+            </button>
         </div>
     </header>
 
