--- a/index.html
+++ b/index.html
@@ -413,7 +413,6 @@
     </main>
 
     <footer class="footer">
-
         <div class="footer__container container">
             <div class="footer__combiner">
                 <div class="footer__address">
@@ -566,7 +565,7 @@
             </button>
             <ul class="nav__list nav__list--menu list">
                 <li class="nav__item nav__item--menu">
-                    <a class="nav__link nav__link--menu link accent--menu" href="./index.html">Студія</a>
+                    <a class="nav__link nav__link--menu link" href="./index.html">Студія</a>
                 </li>
                 <li class="nav__item nav__item--menu">
                     <a class="nav__link nav__link--menu link" href="./portfolio.html">Портфоліо</a>
@@ -600,11 +599,11 @@
                         <a href="#" class="cos-menu__link link">LinkedIn</a>
                     </li>
                 </ul>
-                </di>
             </div>
         </div>
-        <script src="./js/modal.js"></script>
-        <script src="./js/menu.js"></script>
+    </div>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
